--- a/src/index.css
+++ b/src/index.css
@@ -1,45 +1,147 @@
-.sidebar {
-  width:25%;
-  float:left;
-  box-sizing:border-box;
+html {
+  height: 100%;
+  padding: 0px;
 }
-.results > div > div {
-  padding:15px;
-  border:2px solid gray;
-  border-radius:5px;
-  margin:5px;
+input + input {
+  margin-top: 10px;
 }
-.results img {
-  margin:auto;
-  display:block;
-  padding:5px;
+#root {
+  height: 100%;
+  overflow: hidden;
 }
-.sidebar select {
-  width:90%;
-  display:block;
-  margin:auto;
-  margin:5px;
+body {
+  height: 100%;
+  overflow: hidden;
+  background: #EEE;
+  padding: 0px;
+  margin: 0px;
 }
-select option {
-  font-weight:bold;
-  text-align:center;
-  margin:auto;
+body .app {
+  height: 100%;
+  overflow: hidden;
+  background: #EEE;
 }
-
-
-.main {
-  width:75%;
-  box-sizing:border-box;
-  float:left;
+body .app .sidebar {
+  height: 100%;
+  background: #FFF;
+  width: 400px;
+  border-right: 2px solid #CCC;
+  display: inline-block;
 }
-.playlist {
-  width:200px;
-  border:2px solid gray;
-  border-radius:5px;
-  padding:15px;
-  margin:5px;
+body .app .sidebar .search {
+  height: 10%;
+  margin: 0px 10px;
 }
-
-
-
-
+body .app .sidebar .search input {
+  width: 100%;
+  padding: 5px;
+  box-sizing: border-box;
+  border: 1px solid #CCC;
+  border-radius: 3px;
+}
+body .app .sidebar .results {
+  height: 90%;
+  overflow-y: auto;
+}
+body .app .sidebar .results .result {
+  display: inline-flex;
+  padding: 10px;
+}
+body .app .sidebar .results .result span {
+  width: 250px;
+  margin-right: 10px;
+  align-items: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+body .app .sidebar .results .result img {
+  align-items: center;
+  margin-right: 10px;
+  width: 50px;
+  height: 100%;
+  display: flex;
+}
+body .app .sidebar .results .result + .result {
+  border-top: 1px solid #CCC;
+}
+body .app .sidebar .results .result select {
+  width: 20px;
+  height: 20px;
+  display: inline-block;
+  display: flex;
+  width: 14px;
+  height: 16px;
+  margin: auto;
+  -webkit-appearance: none;
+  display: block;
+  font-size: 20px;
+  line-height: 10px;
+}
+body .app .main {
+  display: inline-block;
+  width: 900px;
+  vertical-align: top;
+  height: 100%;
+}
+body .app .main .playlists {
+  height: 100%;
+}
+body .app .main .playlist {
+  border-right: 2px solid #ccc;
+  height: 100%;
+  overflow-y: auto;
+  width: 250px;
+  float: left;
+  position: relative;
+}
+body .app .main .playlist .removeX {
+  cursor: pointer;
+  text-transform: uppercase;
+  font-family: sans;
+  position: absolute;
+  right: 3px;
+  top: 0px;
+  font-weight: bold;
+}
+body .app .main .playlist > button {
+  margin: auto;
+  display: block;
+}
+body .app .main .playlist h3 {
+  text-align: center;
+}
+body .app .main .playlist .video {
+  position: relative;
+  box-sizing: border-box;
+  padding: 10px;
+  width: 100%;
+}
+body .app .main .playlist .video img {
+  display: block;
+  margin: auto;
+}
+body .app .main .playlist .video span {
+  display: block;
+  text-align: center;
+}
+body .app .main .playlist .video + .video {
+  border-top: 1px solid #CCC;
+}
+body .app .main .playlist .video .removeX {
+  color: #888;
+  position: absolute;
+  font-family: sans serif;
+  font-weight: bold;
+  right: 0px;
+  top: 0px;
+}
+body .app .main .playlist .video .removeX:hover {
+  cursor: pointer;
+  color: #000;
+}
+iframe {
+  position: fixed;
+  right: 0px;
+  bottom: 0px;
+}
