select tag styling

--- a/src/index.less
+++ b/src/index.less
@@ -83,6 +83,12 @@ body{
           display: block;
           font-size: 20px;
           line-height: 10px;
+          option {
+            font-size:12px; 
+            &:first-child {
+              display:none;
+            }
+          }
         }
       }
     }
