--- a/src/index.css
+++ b/src/index.css
@@ -78,6 +78,12 @@ body .app .sidebar .results .result select {
   font-size: 20px;
   line-height: 10px;
 }
+body .app .sidebar .results .result select option {
+  font-size: 12px;
+}
+body .app .sidebar .results .result select option:first-child {
+  display: none;
+}
 body .app .main {
   display: inline-block;
   width: 900px;
